# gcp-compute-machines-costs

./: .gitignore  README.md  pyproject.toml
.github/: agents.md  copilot-instructions.md
.github/workflows/: publish.yml
data/: flat_gcp_machines_pricing.yaml  raw_gcp_machines_pricing.yaml
gcp_compute_machines/: __init__.py  constants.py  exceptions.py  scraper.py  scrapper.py
gcp_compute_machines/mappings/: accelerator-optimized-machines.csv  compute-optimized-machines-sku.yaml  compute-optimized-machines.csv  general-purpose-machines.csv  memory-optimized-machines.csv  storage-optimized-machines.csv
gcp_compute_machines/models/: __init__.py  base_machine_info_model.py  machine_info_model.py
gcp_compute_machines/models/skus/: __init__.py  base_object_sku_model.py  gpus_info_model.py  storage_sku_model.py
gcp_compute_machines/providers/: __init__.py  base_machines_provider.py
gcp_compute_machines/providers/base/: __init__.py  base_machines_provider.py
gcp_compute_machines/providers/base/models/: __init__.py  base_machine_info_model.py  helper_types.py
gcp_compute_machines/providers/gcloud_compute/: __init__.py  gcloud_compute_provider.py
gcp_compute_machines/providers/gcloud_compute/models/: __init__.py  gcloud_compute_machine_info_model.py
gcp_compute_machines/providers/scraper/: __init__.py  scraped_machines_provider.py  scraper.py
gcp_compute_machines/providers/scraper/mappings/: accelerator-optimized-machines-sku.yaml  accelerator-optimized-machines.csv  compute-optimized-machines.csv  general-purpose-machines-sku.yaml  gpu-skus-mapping.yaml  (+7 more)
(+4 files in other folders)
